--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -3431,7 +3431,7 @@ input[type=text].noui-height-helper:not(.noUi-target)[data-fouc] {
   color: #fff;
   display: inline-block;
   text-decoration: none;
-  background-color: #293a50;
+  background-color: #324148;
   border: none;
   cursor: pointer;
   margin-left: 0.625rem;
@@ -6492,8 +6492,8 @@ a.plupload_disabled {
   max-width: 100%;
   padding: 1.25rem;
   width: 31.25rem;
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
   border-radius: 0.25rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1); }
   .swal2-popup:focus {
@@ -13202,7 +13202,7 @@ a.fc-more {
     left: 1.5rem; }
   .timeline-left .timeline-row,
   .timeline-left .timeline-date {
-    padding-left: 4.25rem; }
+    padding-left: 5.5rem; }
   .timeline-right .timeline-container:before, .timeline-right:before, .timeline-right:after,
   .timeline-right .timeline-date:before,
   .timeline-right .timeline-date:after {
@@ -13215,7 +13215,7 @@ a.fc-more {
     margin-right: -1px; }
   .timeline-right .timeline-row,
   .timeline-right .timeline-date {
-    padding-right: 4.25rem; }
+    padding-right: 5.5rem; }
   .timeline-left .timeline-date,
   .timeline-right .timeline-date {
     padding-top: 0.625rem;
@@ -13268,11 +13268,11 @@ a.fc-more {
   .timeline-right .timeline-time {
     padding-top: 0.625rem;
     margin-bottom: 1.25rem;
-    padding-left: 0.625rem; }
+    padding-left: 1.25rem; }
   .timeline-right .timeline-time {
     text-align: right;
     padding-left: 0;
-    padding-right: 0.625rem; }
+    padding-right: 1.25rem; }
   .timeline-center .timeline-time,
   .timeline-center .timeline-row-full .timeline-time {
     position: absolute;
