--- a/assets/css/bootstrap_limitless.css
+++ b/assets/css/bootstrap_limitless.css
@@ -1969,7 +1969,7 @@ select[size] {
 
 .navbar-dark {
   color: rgba(255, 255, 255, 0.9);
-  background-color: #324148;
+  background-color: #293a50;
   border-bottom-color: rgba(255, 255, 255, 0.1); }
   .page-header-content + .navbar-dark,
   .content + .navbar-dark,
@@ -2414,7 +2414,7 @@ a.breadcrumb-item, a.breadcrumb-elements-item {
       margin-bottom: 0; }
 
 .breadcrumb-line-light {
-  background-color: #fafafa;
+  background-color: #fff;
   border-color: #ddd;
   color: #333; }
   .page-header-light .breadcrumb-line-light:not(.breadcrumb-line-component):last-child {
@@ -3004,15 +3004,15 @@ a.badge[class*=bg-]:not(.bg-transparent):not(.bg-white):not(.bg-light):hover, a.
     border-color: #828282; }
 
 .list-group-item-dark {
-  color: #1a2225;
+  color: #151e2a;
   background-color: #ECEFF1; }
   .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-    color: #1a2225;
+    color: #151e2a;
     background-color: #dde3e6; }
   .list-group-item-dark.list-group-item-action.active {
     color: #fff;
-    background-color: #1a2225;
-    border-color: #1a2225; }
+    background-color: #151e2a;
+    border-color: #151e2a; }
 
 /* ------------------------------------------------------------------------------
  *
