--- a/assets_main/css/style-red.css
+++ b/assets_main/css/style-red.css
@@ -61,9 +61,9 @@ h6,
 
 h1,
 .h1 {
-  font-size: 60px;
-  line-height: 90px;
-  font-weight: 100;
+  /*font-size: 60px;*/
+  /*line-height: 90px;*/
+  /*font-weight: 100;*/
 }
 
 h1 a,
